<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ucsd.meetup.MyEvents"
    tools:showIn="@layout/activity_myevent">


    <Spinner
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/filter"
        android:layout_alignParentTop="true"
        android:contextClickable="false"
        android:clickable="true"
        android:longClickable="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:id="@+id/eventsList"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/filter"
        android:clickable="false"
        android:contextClickable="false"
        tools:listitem="@android:layout/simple_list_item_2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="Profile"
        android:id="@+id/profileButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="Events"
        android:id="@+id/events"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/profileButton"
        android:layout_toEndOf="@+id/profileButton" />

    <Button
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="Create Event"
        android:id="@+id/createEvent_MyEvent"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/events"
        android:layout_toEndOf="@+id/events" />

    <Button
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:text="Logout"
        android:id="@+id/logoutButton"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/createEvent_MyEvent"
        android:layout_toEndOf="@+id/createEvent_MyEvent" />

</RelativeLayout>