<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ucsd.meetup.JoinEvents"
    tools:showIn="@layout/activity_join_events">


    <Spinner
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/joinEventsFilter"
        android:layout_alignParentTop="true"
        android:contextClickable="false"
        android:clickable="true"
        android:longClickable="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:id="@+id/joinEventsList"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/joinEventsFilter"
        android:clickable="false"
        android:contextClickable="false"
        tools:listitem="@android:layout/simple_list_item_2" />

</RelativeLayout>