...

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="Join Event"
        android:id="@+id/quitBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true" />


</RelativeLayout>
