<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateEvents"
    tools:showIn="@layout/activity_create_event">

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/actName"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="Activity Name" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/loc"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/actName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Location" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/type"
        android:layout_centerVertical="true"
        android:hint="Activity Type" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Description" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        android:id="@+id/createBtn"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/description"
        android:layout_alignRight="@+id/description"
        android:layout_alignEnd="@+id/description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date"
        android:layout_below="@+id/loc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/loc"
        android:layout_alignEnd="@+id/loc"
        android:hint="Date" />

</RelativeLayout>
